# ibm-build-genai-apps

./: .gitignore  README.md  pyproject.toml
1_ImageCaption/: captions.txt  image_cap.py  image_captioning_app.py
2_ChatGPT_Like_website/: app.py
2_ChatGPT_Like_website/static/: script.js
3_VoiceAssistant/: worker.py
4_MeetingAssistant/: speech2text_app.py
7_AI_CareerCoach/: the_watson_local.py
